--- a/Accessories.html
+++ b/Accessories.html
@@ -13,7 +13,7 @@
     <title>Accessories</title>
     <style>
         .background {
-          background-color: black;
+            background-color: black;
         }
 
         .nav-logo {
@@ -22,9 +22,11 @@
             color: hsla(0, 0%, 0%, 0.588);
             font-style: oblique;
         }
-        nav{
-            background-image: linear-gradient(to left, hsla(240, 100%, 50%, 0.811),hsla(240, 100%, 50%, 0.811), hsla(240, 100%, 50%, 0.811), hsla(0, 0%, 0%, 0.791));
+
+        nav {
+            background-image: linear-gradient(to left, hsla(240, 100%, 50%, 0.811), hsla(240, 100%, 50%, 0.811), hsla(240, 100%, 50%, 0.811), hsla(0, 0%, 0%, 0.791));
         }
+
         .nav-list {
             width: 100%;
         }
@@ -43,22 +45,25 @@
             width: 60%;
             margin-left: 100px;
         }
-        .nav-icons{
-            color:white;
+
+        .nav-icons {
+            color: white;
         }
 
         .nav-icons:hover {
             color: orange;
         }
-        .link{
-            display:none;
+
+        .link {
+            display: none;
         }
-      
+
         .login-link {
-            font-size:15px;
+            font-size: 15px;
             color: white;
         }
-        .login-link:hover{
+
+        .login-link:hover {
             color: orange;
         }
 
@@ -110,6 +115,7 @@
             cursor: pointer;
             border-radius: 1px;
         }
+
         footer {
             margin-top: 150px;
         }
@@ -134,6 +140,7 @@
             font-size: 18px;
             font-weight: lighter;
         }
+
         .footer-list2 {
             margin-top: 40px;
         }
@@ -142,7 +149,7 @@
             color: lightgrey;
             line-height: 40px;
             width: 80%;
-           margin-left: 20px;
+            margin-left: 20px;
         }
 
         .footer-link {
@@ -185,7 +192,7 @@
             }
 
             .footer-paraghap-list {
-                line-height:30px;
+                line-height: 30px;
             }
 
             .footer-link {
@@ -200,19 +207,21 @@
         }
 
         @media (max-width:765px) {
-            
-        .footer-link {
-            line-height:27px;
-            font-size:16px;
-        }
-        .footer-header{
-            font-size: 18px;
-            font-weight: bolder;
-            margin-top:15px; 
-        }
-        .footer-list2{
-            margin-top:10px;
-        }
+
+            .footer-link {
+                line-height: 27px;
+                font-size: 16px;
+            }
+
+            .footer-header {
+                font-size: 18px;
+                font-weight: bolder;
+                margin-top: 15px;
+            }
+
+            .footer-list2 {
+                margin-top: 10px;
+            }
         }
 
         @media (max-width:500px) {
@@ -327,7 +336,8 @@
                         <div class="link" id="login">
                             <ul class="breadcrumb">
                                 <li class="breadcrumb-item"><a href="login.html" class="login-link">Login</a></li>
-                                <li class="breadcrumb-item text-light"> <a href="sign-up.html" class="login-link">Sign In</a>
+                                <li class="breadcrumb-item text-light"> <a href="sign-up.html" class="login-link">Sign
+                                        In</a>
                                 </li>
                             </ul>
                         </div>
@@ -341,18 +351,11 @@
                 <div class="container-fliud">
                     <div class="row mx-2 mx-md-1">
                         <div class="col-lg-2 col-md-3 col-sm-4 col-4 mt-4">
-                            <ul class="breadcrumb">
-                                <li class="breadcrumb-item"><a href="index.html" class=" main-link-header">Home</a></li>
-                                <li class="breadcrumb-item text-light">Accessories</li>
-                            </ul>
                             <ul>
-                                <li class="main-list mt-5"><a href="Accessories.html"
-                                        class="main-links Accessories">Accessories</a>
-                                </li>
-                                <li class="main-list"><a href="shop.html" class="main-links">Shop</a></li>
-                                <li class="main-list"><a href="Computers.html" class="main-links">Computers</a></li>
+                                <li class="main-list  mt-5"><a href="shop.html" class="main-links">Shop</a></li>
                                 <li class="main-list"><a href="Mobile.html" class="main-links">Mobile</a></li>
-                                <li class="main-list"><a href="Appliances.html" class="main-links">Appliances</a></li>
+                                <li class="main-list"><a href="Computers.html" class="main-links">Computers</a>
+                                <li class="main-list"><a href="Accessories.html" class="main-links Accessories">Accessories</a></li>
                                 <li class="main-list"><a href="contact.html" class="main-links">Contact</a></li>
                             </ul>
                         </div>
@@ -361,7 +364,7 @@
                                 <span class="fs-4 text-light">No produts</span>
                                 <div class="row">
                                     <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
-                                        <a href="/each-products/charger1.html"> <img src="image/charger (2).jpeg"
+                                        <a href="/each-products/charger1.html"> <img src="image/pad.jpg"
                                                 class="img-item" alt=""></a>
                                     </div>
                                     <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
@@ -380,11 +383,11 @@
                                                 class="img-item" alt=""></a>
                                     </div>
                                     <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
-                                        <a href="/each-products/charger2.html"><img src="image/charger (1).jpeg"
+                                        <a href="/each-products/charger2.html"><img src="image/accessories (3).jpg"
                                                 class="img-item" alt=""></a>
                                     </div>
                                     <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
-                                        <a href="/each-products/keybroad.html"> <img src="image/color keyboard.jpg"
+                                        <a href="/each-products/keybroad.html"> <img src="image/jambx.jpg"
                                                 class="img-item" alt=""></a>
                                     </div>
                                     <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
@@ -400,16 +403,16 @@
                                                 class="img-item" alt=""></a>
                                     </div>
                                     <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
-                                        <a href="/each-products/batterybank1.html"> <img src="image/apple batterypack.jpg"
-                                                class="img-item" alt=""></a>
+                                        <a href="/each-products/batterybank1.html"> <img
+                                                src="image/apple batterypack.jpg" class="img-item" alt=""></a>
                                     </div>
                                     <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
                                         <a href="/each-products/batterybank2.html"> <img src="image/charger (3).jpeg"
                                                 class="img-item" alt=""></a>
                                     </div>
                                     <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
-                                        <a href="/each-products/batterybank3.html"> <img src="image/vrurc 10000mAh bank.jpg"
-                                                class="img-item" alt=""></a>
+                                        <a href="/each-products/batterybank3.html"> <img
+                                                src="image/vrurc 10000mAh bank.jpg" class="img-item" alt=""></a>
                                     </div>
                                     <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
                                         <a href="/each-products/earbud2.html"> <img src="image/jbl buds.jpg"
@@ -433,7 +436,8 @@
                     <div class="row">
                         <div class="col-12 col-lg-5 col-md-5 footer-container">
                             <h3 class=" text-capitalize  footer-header">Amy Eletronics Accessories</h3>
-                            <p class="footer-paraghap-list footer-list2">Welcome to Amy Accessories, your trusted destination
+                            <p class="footer-paraghap-list footer-list2">Welcome to Amy Accessories, your trusted
+                                destination
                                 for high quality eletronic accessories. We stand behind our produts with 6-months
                                 guarantee, ensuring you can shop with confindence. Our mission is is to make the latest
                                 eletronic devices easily accessible to eyeryone</p>
