--- a/Mobile.html
+++ b/Mobile.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-        <script src="https://kit.fontawesome.com/693dd61249.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/693dd61249.js" crossorigin="anonymous"></script>
     <style>
         * {
             margin: 0PX;
@@ -127,7 +127,6 @@
             width: 100%;
             object-fit: cover;
             border-radius: 10px;
-            border: 5px solid orange;
             background-color: hsla(0, 0%, 100%, 0.59);
         }
 
@@ -137,6 +136,23 @@
             transition-duration: 1s;
             cursor: pointer;
             border-radius: 1px;
+        }
+
+        .img-container {
+            border: 3px solid orange;
+            padding: 30px;
+        }
+
+        .img-container h2 {
+            font-size: 17px;
+            font-weight: bolder;
+            margin-top: 10px;
+        }
+
+        .img-container span {
+            font-weight: lighter;
+            font-size: 17px;
+            color: white;
         }
 
         footer {
@@ -373,17 +389,12 @@
                 <div class="container-fliud">
                     <div class="row mx-md-1 content-container">
                         <div class="col-lg-2 col-md-3 col-sm-4 col-4 mt-4 link-container">
-                            <!-- <ul class="breadcrumb">
-                                <li class="breadcrumb-item"><a href="index.html" class=" main-link-header">Home</a></li>
-                                <li class="breadcrumb-item text-light">Cell Phones</li>
-                            </ul> -->
                             <ul>
-                                <li class="main-list mt-5"><a href="Mobile.html" class="main-links moblie">Mobile</a>
+                                <li class="main-list mt-5"><a href="shop.html" class="main-links">Shop</a></li>
+                                <li class="main-list "><a href="Mobile.html" class="main-links moblie">Mobile</a>
                                 </li>
-                                <li class="main-list "><a href="shop.html" class="main-links">Shop</a></li>
                                 <li class="main-list"><a href="Computers.html" class="main-links">Computers</a></li>
                                 <li class="main-list"><a href="Accessories.html" class="main-links">Accessories</a></li>
-                                <li class="main-list"><a href="Appliances.html" class="main-links">Appliances</a></li>
                                 <li class="main-list"><a href="contact.html" class="main-links">Contact</a></li>
                             </ul>
                         </div>
@@ -391,45 +402,78 @@
                             <div class="container-fliud">
                                 <span class="fs-4 text-light">No produts</span>
                                 <div class="row">
+                                    <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5 ">
+                                        <div class="img-container">
+                                            <a href="/each-products/OPPO Find X7 Ultra.html"> <img src="image/oppo amy special.jpg"
+                                                    class="img-item" alt=""></a>
+                                            <h2 class="text-light">OPPO Find X7 Ultra</h2>
+                                            <span><strike>$00000</strike><span>-$0000</span></span>
+                                            <button> <i class="fa-solid fa-user"> </i></button>
+                                        </div>
+
+                                    </div>
                                     <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
-                                        <a href="/each-products/redmi.html"> <img src="image/oppo amy special.jpg" class="img-item"
-                                                alt=""></a>
-                                        <div>
-                                            <h2 class="text-light">ipone</h2>
+                                        <div class="img-container">
+                                            <a href="/each-products/OPPO F25 Pro.html"> <img src="image/oppo.jpg"
+                                                    class="img-item" alt=""></a>
+                                                <h2 class="text-light">OPPO F25 Pro</h2>
+                                                <span><strike>$00000</strike><span>-$0000</span></span>
+                                        </div>
+
+                                    </div>
+                                    <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
+                                        <div class="img-container">
+                                            <a href="/each-products/Samsung Galaxy A32.html"> <img src="images/samsung.jpg"
+                                                class="img-item" alt=""></a>
+                                            <h2 class="text-light"> Samsung Galaxy A32</h2>
+                                             <span><strike>$00000</strike><span>-$0000</span></span>
                                         </div>
                                     </div>
                                     <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
-                                        <a href="/each-products/oppo.html"> <img src="image/oppo.jpg" class="img-item" alt=""></a>
+                                       <div class="img-container">
+                                        <a href="/each-products/Oppo Reno 13 Pro.html"><img src="image/PHONE- (1).jpg"
+                                            class="img-item" alt=""></a>
+                                        <h2 class="text-light">Oppo Reno 13 Pro</h2>
+                                        <span><strike>$00000</strike><span>-$0000</span></span>
+                                       </div>
                                     </div>
                                     <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
-                                        <a href="/each-products/samsung.html"> <img src="images/samsung.jpg"
+                                       <div class="img-container">
+                                        <a href="/each-products/Realme 12 X Pro Plus.html"> <img src="image/PHONE- (2).jpg"
+                                            class="img-item" alt=""></a>
+                                        <h2 class="text-light">Realme 12 X Pro Plus</h2>
+                                        <span><strike>$00000</strike><span>-$0000</span></span>
+                                       </div>
+                                    </div>
+                                    <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
+                                        <div class="img-container">
+                                            <a href="/each-products/Oppo Find N3 Flip.html"> <img src="image/PHONE- (5).jpg"
                                                 class="img-item" alt=""></a>
+                                            <h2 class="text-light">Oppo Find N3 Flip</h2>
+                                            <span><strike>$00000</strike><span>-$0000</span></span>
+                                        </div>
                                     </div>
                                     <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
-                                        <a href="/each-products/samsung2.html"><img src="image/mobiles (1).jpg"
+                                        <div class="img-container">
+                                            <a href="/each-products/iPhone 12 pro.html"> <img src="image/PHONE- (7).jpg"
                                                 class="img-item" alt=""></a>
+                                            <h2 class="text-light">iPhone 12 pro</h2>
+                                            <span><strike>$00000</strike><span>-$0000</span></span>
+                                        </div>
                                     </div>
                                     <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
-                                        <a href="/each-products/nokia-11.html"> <img src="image/mobile-phone.jpg"
+                                        <div class="img-container">
+                                            <a href="/each-products/Oppo Reno 10 Pro+.html"> <img src="image/PHONE- (4).jpg"
                                                 class="img-item" alt=""></a>
+                                            <h2 class="text-light">Oppo Reno 10 Pro+</h2>
+                                            <span><strike>$00000</strike><span>-$0000</span></span>
+                                        </div>
                                     </div>
-                                    <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
-                                        <a href="/each-products/oppox7.html"> <img src="image/mobiles (1).jpg"
-                                                class="img-item" alt=""></a>
-                                    </div>
-                                    <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
-                                        <a href="/each-products/samsungx9.html"> <img src="image/mobiles (2).jpg"
-                                                class="img-item" alt=""></a>
-                                    </div>
-                                    <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
-                                        <a href="/each-products/nokia.html"> <img src="image/mobiles (2).jpg" class="img-item"
-                                                alt=""></a>
-                                    </div>
-
                                 </div>
                             </div>
                         </div>
                     </div>
+                </div>
             </section>
         </main>
         <footer>
