--- a/each-products/Oppo Find N3 Flip.html
+++ b/each-products/Oppo Find N3 Flip.html
@@ -59,8 +59,9 @@
             color: white;
         }
         .img-item {
-            height:530px;
+            height: 480px;
             width: 100%;
+            object-fit: cover;
             border-radius: 5px;
             border: 5px solid orange;
             background-color: hsla(0, 0%, 100%, 0.59);
@@ -261,11 +262,11 @@
         <main>
             <div class="container-fliud redmi-container">
                 <hr class="mx-5 text-light my-3">
-               <h4 class="mt-5 mb-5 text-light ms-5 ">potable Redmi smart phone</h4>
+               <h4 class="mt-5 mb-5 text-light ms-5 ">Oppo Find N3 Flip</h4>
                <div class="container">
                 <div class="row">
                     <div class="col-lg-6 col-md-6 col-sm-12 col-12 redmi-content">
-                        <img src="/image/nokia 11pro.jpg" class="img-item" alt="">
+                        <img src="/image/PHONE- (5).jpg" class="img-item" alt="">
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-12 col-12 redmi-content"></div>
                 </div>
