--- a/each-products/Samsung Galaxy A32.html
+++ b/each-products/Samsung Galaxy A32.html
@@ -60,6 +60,7 @@
         }
         .img-item {
             height:530px;
+            object-fit: cover;
             width: 100%;
             border-radius: 5px;
             border: 5px solid orange;
@@ -169,7 +170,7 @@
             }
 
             .img-item {
-                height: 400px;
+                height:400px;
             }
         }
 
@@ -261,11 +262,11 @@
         <main>
             <div class="container-fliud redmi-container">
                 <hr class="mx-5 text-light my-3">
-               <h4 class="mt-5 mb-5 text-light ms-5 ">potable Redmi smart phone</h4>
+               <h4 class="mt-5 mb-5 text-light ms-5 ">Samsung Galaxy A32</h4>
                <div class="container">
                 <div class="row">
                     <div class="col-lg-6 col-md-6 col-sm-12 col-12 redmi-content">
-                        <img src="/image/oppo.jpg" class="img-item" alt="">
+                        <img src="/images/samsung.jpg" class="img-item" alt="">
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-12 col-12 redmi-content"></div>
                 </div>
