--- a/each-products/iPhone 12 pro.html
+++ b/each-products/iPhone 12 pro.html
@@ -60,7 +60,8 @@
             color: white;
         }
         .img-item {
-            height:600px;
+            height:480px;
+            object-fit: cover;
             width: 100%;
             border-radius: 5px;
             border: 5px solid orange;
@@ -261,11 +262,11 @@
         <main>
             <div class="container-fliud">
                 <hr class="mx-5 text-light my-3">
-               <h4 class="mt-5 mb-5 text-light ms-5 ">potable Redmi smart phone</h4>
+               <h4 class="mt-5 mb-5 text-light ms-5 ">iPhone 12 pro</h4>
                <div class="container">
                 <div class="row">
                     <div class="col-lg-6 col-md-6 col-sm-12 col-12 product-content">
-                        <img src="/image/mini frigeee.jpg" class="img-item" alt="">
+                        <img src="/image/PHONE- (7).jpg" class="img-item" alt="">
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-12 col-12 product-content"></div>
                 </div>
