--- a/index.html
+++ b/index.html
@@ -470,10 +470,6 @@
                                 </li>
                                 <li>
                                     <hr class="divider">
-                                <li class="nav-list"><a href="Appliances.html" class="nav-link a-link ">Appliances</a>
-                                </li>
-                                <li>
-                                    <hr class="divider">
                                 </li>
                                 <li class="nav-list"><a href="contact.html" class="nav-link a-link ">Contact</a></li>
                                 <li>
@@ -632,7 +628,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="container copy-right-box">
+                <div class="container-fliud copy-right-box">
                     <div class="row">
                         <div class="col">
                             <div class="col-3 "><span class="copy-right">&copy; 2025 by AmyAccessory</span></div>
