--- a/shop.html
+++ b/shop.html
@@ -146,6 +146,9 @@
             font-size: 18px;
             color: orange;
         }
+        .computer{
+            height:400px;
+        }
 
         .line {
             width: 95%;
@@ -403,7 +406,6 @@
                                 <li class="main-list"><a href="Mobile.html" class="main-links">Mobile</a></li>
                                 <li class="main-list"><a href="Computers.html" class="main-links">Computers</a></li>
                                 <li class="main-list"><a href="Accessories.html" class="main-links">Accessories</a></li>
-                                <li class="main-list"><a href="Appliances.html" class="main-links">Appliances</a></li>
                                 <li class="main-list"><a href="contact.html" class="main-links">Contact</a></li>
                             </ul>
                         </div>
@@ -450,12 +452,12 @@
                                     <span class="right"><a href="Computers.html"><button class="btn shop-more">[Discover
                                                 More]</button></a></span>
                                     <div class="col-lg-6 col-md-6 col-sm-12 col-12 mt-5">
-                                        <a href="/each-products/hp3.html"> <img src="image/laptop-avi (2).jpg"
-                                                class="img-item" alt=""></a>
+                                        <a href="/each-products/hp3.html"> <img src="image/laptops- (5).jpg"
+                                                class="img-item computer" alt=""></a>
                                     </div>
                                     <div class="col-lg-6 col-md-6 col-sm-12 col-12 mt-5">
                                         <a href="/each-products/apple-coloured-laptop.html"> <img
-                                                src="image/laptop-avi (1).jpg" class="img-item" alt=""></a>
+                                                src="image/laptops- (6).jpg" class="img-item computer" alt=""></a>
                                     </div>
                                 </div>
                                 <hr class="text-light line mt-5">
