--- a/each-products/OPPO Find X7 Ultra.html
+++ b/each-products/OPPO Find X7 Ultra.html
@@ -61,6 +61,7 @@
         .img-item {
             height:530px;
             width: 100%;
+            object-fit: cover;
             border-radius: 5px;
             border: 5px solid orange;
             background-color: hsla(0, 0%, 100%, 0.59);
@@ -262,11 +263,11 @@
         <main>
             <div class="container-fliud redmi-container">
                 <hr class="mx-5 text-light my-3">
-               <h4 class="mt-5 mb-5 text-light ms-5 ">potable Redmi smart phone</h4>
+               <h4 class="mt-5 mb-5 text-light ms-5 ">OPPO Find X7 Ultra</h4>
                <div class="container">
                 <div class="row">
                     <div class="col-lg-6 col-md-6 col-sm-12 col-12 redmi-content">
-                        <img src="/image/redmi.jpg" class="img-item" alt="">
+                        <img src="/image/oppo amy special.jpg" class="img-item" alt="">
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-12 col-12 redmi-content"></div>
                 </div>
