--- a/each-products/Oppo Reno 13 Pro.html
+++ b/each-products/Oppo Reno 13 Pro.html
@@ -61,6 +61,7 @@
         .img-item {
             height:530px;
             width: 100%;
+            object-fit: cover;
             border-radius: 5px;
             border: 5px solid orange;
             background-color: hsla(0, 0%, 100%, 0.59);
@@ -93,6 +94,7 @@
             font-size: 18px;
             font-weight: lighter;
         }
+
         .footer-list2 {
             margin-top: 40px;
         }
@@ -101,7 +103,7 @@
             color: lightgrey;
             line-height: 40px;
             width: 80%;
-           margin-left: 20px;
+            margin-left: 20px;
         }
 
         .footer-link {
@@ -128,6 +130,7 @@
             height: 80px;
             margin-top: 50px;
         }
+
         @media (max-width:780px) {
             .footer-list {
                 line-height: 30px;
@@ -135,7 +138,7 @@
             }
 
             .footer-paraghap-list {
-                line-height:30px;
+                line-height: 30px;
             }
 
             .footer-link {
@@ -150,22 +153,25 @@
         }
 
         @media (max-width:765px) {
-            
-        .footer-link {
-            line-height:27px;
-            font-size:16px;
-        }
-        .footer-header{
-            font-size: 18px;
-            font-weight: bolder;
-            margin-top:15px; 
-        }
-        .footer-list2{
-            margin-top:10px;
-        }
-        .img-item {
-            height:400px;
-        }
+
+            .footer-link {
+                line-height: 27px;
+                font-size: 16px;
+            }
+
+            .footer-header {
+                font-size: 18px;
+                font-weight: bolder;
+                margin-top: 15px;
+            }
+
+            .footer-list2 {
+                margin-top: 10px;
+            }
+
+            .img-item {
+                height: 400px;
+            }
         }
 
         @media (max-width:400px) {
@@ -192,14 +198,10 @@
             .footer-list2 {
                 margin-top: 12px;
             }
-            .img-item {
-            height:350px;
-        }
-        }
 
-        .copy-right-box {
-            height: 80px;
-            margin-top: 50px;
+            .img-item {
+                height: 350px;
+            }
         }
     </style>
 </head>
@@ -260,11 +262,11 @@
         <main>
             <div class="container-fliud redmi-container">
                 <hr class="mx-5 text-light my-3">
-               <h4 class="mt-5 mb-5 text-light ms-5 ">potable Redmi smart phone</h4>
+               <h4 class="mt-5 mb-5 text-light ms-5 ">Oppo Reno 13 Pro</h4>
                <div class="container">
                 <div class="row">
                     <div class="col-lg-6 col-md-6 col-sm-12 col-12 redmi-content">
-                        <img src="/image/i (2).jpeg" class="img-item" alt="">
+                        <img src="/image/PHONE- (1).jpg" class="img-item" alt="">
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-12 col-12 redmi-content"></div>
                 </div>
@@ -285,7 +287,7 @@
                         <div class="col-12 col-lg-2 col-md-2 fs-md-5 footer-container">
                             <h3 class=" text-capitalize  footer-header">Menu</h3>
                             <ul>
-                                <li class="footer-list footer-list2"><a href="shop.html" class="footer-link">Shop</a>
+                                <li class="footer-list footer-list2"><a href="/shop.html" class="footer-link">Shop</a>
                                 </li>
                                 <li class="footer-list"><a href="/Mobile.html" class="footer-link">Mobile</a></li>
                                 <li class="footer-list"><a href="/Computers.html" class="footer-link">Computers</a></li>
